--- a/src/Pin.CricketDarts.Server/_Imports.razor
+++ b/src/Pin.CricketDarts.Server/_Imports.razor
@@ -11,3 +11,6 @@
 @using Pin.CricketDarts.Server.Shared
 @using Pin.CricketDarts.Server.Services.Interfaces
 @using Pin.CricketDarts.Server.Components
+@using Microsoft.AspNetCore.SignalR
+@using Microsoft.AspNetCore.SignalR.Client
+@using Pin.CricketDarts.Server.Models.Statistics
